# environmental-news-nlp

./: README.md  pyproject.toml
src/: main.ipynb  preprocessing.ipynb
