[tool.poetry]
name = "environmental-news-nlp"
version = "0.1.0"
description = ""
authors = ["TzuHwan Seet <tzuhwan_seet@brown.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.1"
numpy = "^1.22.3"
sklearn = "^0.0"
matplotlib = "^3.5.1"
spacy = "^3.2.3"
ipykernel = "^6.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
